# xdelta-decoder-rust

./: Cargo.toml
src/: benchmark.rs  xdelta_decoder.rs
