[package]
name = "xdelta"
version = "0.1.1"
authors = ["Randy von der Weide <randy@vonderweide.nl>"]
license = "MIT/Apache-2.0"

[dependencies]
lzma-sys = "0.1"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.4.2", features = ["flamegraph", "criterion"] }
# We use rand in our benchmarks to create random data to sort
rand = "0.8.0"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[[bin]]
name = "xdelta_decoder"
path = "src/xdelta_decoder.rs"